fix slider on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -40,8 +40,9 @@
 .textBlockWrapper {
   background-color: #1f1918;
   grid-column: 1 / -1;
-  width: 100vw;
-  padding: 2rem;
+  max-width: 100vw;
+  padding: 2rem 4%;
+  text-align: center;
   margin-left: calc(-50vw + 50%);
 }
 
@@ -53,11 +54,14 @@
   font-style: italic;
   margin: auto;
 }
-.name {
-  text-align: right;
-}
 
 @media screen and (min-width: 768px) {
+  .textBlock {
+    text-align: center;
+  }
+  .name {
+    text-align: right;
+  }
   .infoCardsWrapper {
     flex-direction: row;
     flex-wrap: wrap;
