--- a/components/UpcomingCourses/UpcomingCourses.module.css
+++ b/components/UpcomingCourses/UpcomingCourses.module.css
@@ -23,8 +23,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  margin-bottom: 2rem;
 }
 
 .heading {
